# stars_without_numbers

./: Cargo.toml  README.md
frontend/: index.html
frontend/css/: characters.css  home.css  index.css
frontend/js/: index.js
src/: main.rs
test/: sheet.html
