[package]
name = "stars_without_numbers"
version = "0.1.0"
authors = ["Ray Kochenderfer <35624960+GimpFlamingo@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
rocket_contrib = "0.4.2"
